--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,11 +6,23 @@
 #    By: jung-lee <jung-lee@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/02/15 11:53:27 by jung-lee          #+#    #+#              #
-#    Updated: 2021/02/15 11:53:27 by jung-lee         ###   ########.fr        #
+#    Updated: 2021/03/04 16:16:57 by hmyoung          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS 	= ./ft_printf.c
+SRCS 	= ./ft_printf.c \
+		  ./check_conversion.c \
+		  ./check_options.c \
+		  ./ft_printf_utils.c \
+		  ./handle_base.c \
+		  ./init_struct.c \
+		  ./print_conversion_c.c \
+		  ./print_conversion_diuxX.c \
+		  ./print_conversion_p.c \
+		  ./print_conversion_percent.c \
+		  ./print_conversion_s.c \
+		  ./print_conversion_utiols.c \
+		  ./print_num_utils.c \
 NAME 	= libftprintf.a
 OBJS	= $(SRCS:.c=.o)
 CC 	 	= gcc
