add sort function

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -14,6 +14,7 @@ SRCS_PS =	./srcs/push_swap.c \
 			./srcs/operation_function.c \
 			./srcs/handle_operation_list.c \
 			./srcs/handle_free.c \
+			./srcs/sort_function.c \
 
 NAME_PS = push_swap
 OBJS_PS = $(SRCS_PS:.c=.o)
