--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -16,6 +16,7 @@ SRCS_PS =	./srcs/push_swap.c \
 			./srcs/handle_free.c \
 			./srcs/sort_function.c \
 			./srcs/find_minmax.c \
+			./srcs/optimize.c \
 
 NAME_PS = push_swap
 OBJS_PS = $(SRCS_PS:.c=.o)
